--- a/src/components/_header.pug
+++ b/src/components/_header.pug
@@ -1,4 +1,4 @@
-.modal.fade#navbarModal(tabindex="-1" aria-hidden="true")
+.modal#navbarModal(tabindex="-1" aria-hidden="true")
     .modal-dialog.modal-dialog-centered.modal-sm.d-flex.justify-content-center
         .modal-content.w-75
             .modal-header
