--- a/src/styles/components/sections/_autoStages.sass
+++ b/src/styles/components/sections/_autoStages.sass
@@ -1,4 +1,4 @@
-@import src/styles/components/variables
+@import ../variables
 
 #auto-stages
   background: url("../../../assets/images/background/conus-bg.webp") 0 center no-repeat, url("../../../assets/images/background/stages-car-bg.webp") 100% center no-repeat
@@ -13,16 +13,16 @@
   display: inline-block
   width: 24px
   font-family: 'Roboto', sans-serif
-  font-size: 1.6rem
+  font-size: 16px
   color: $red
 
 .stage__title
   display: inline-block
-  font-size: 1.6rem
+  font-size: 16px
   margin-bottom: 5px
 
 .stage__description
-  font-size: 1.4rem
+  font-size: 14px
   color: $light-grey
 
 .auto-stages__li
@@ -86,13 +86,6 @@
     gap: $autostages-block-gap
     border-left: 1px solid $lighter-grey
     padding-left: 39px
-
-  .stage__index
-    display: inline-block
-    width: 18px
-    font-family: 'Roboto', sans-serif
-    font-size: 1.6rem
-    color: $red
 
   .auto-stages__li
     position: relative
