--- a/src/styles/components/sections/_branches.sass
+++ b/src/styles/components/sections/_branches.sass
@@ -1,4 +1,4 @@
-@import src/styles/components/variables
+@import ../variables
 
 #branches
   background: url("../../../assets/images/background/branches-bg.webp") fixed no-repeat
