--- a/src/styles/components/sections/_categories.sass
+++ b/src/styles/components/sections/_categories.sass
@@ -1,4 +1,4 @@
-@import src/styles/components/variables
+@import ../variables
 
 #categories
   background: url("../../../assets/images/background/auto-bg.webp") no-repeat 100% center, url("../../../assets/images/background/moto-bg.webp") no-repeat 0 center
@@ -28,13 +28,13 @@
   position: relative
 
 .category__advantage
-  font-size: 1.4rem
-  margin-bottom: 1.6rem
+  font-size: 14px
+  margin-bottom: 16px
 
 .category__price
   margin-block: 3.3rem 40px
   font-family: 'Roboto', sans-serif
-  font-size: 2.4rem
+  font-size: max(2.4rem, 20px)
   font-weight: 500
 
 @media screen and (max-width: $md)
