--- a/src/styles/components/sections/_events.sass
+++ b/src/styles/components/sections/_events.sass
@@ -1,4 +1,4 @@
-@import src/styles/components/variables
+@import ../variables
 
 #events
   background: url("../../../assets/images/background/events-bg.webp") no-repeat 95%
@@ -6,4 +6,4 @@
 
 .event__description
   margin-block: 20px 50px
-  font-size: 2rem
+  font-size: max(2rem, 16px)
