--- a/src/styles/components/sections/_instructors.sass
+++ b/src/styles/components/sections/_instructors.sass
@@ -1,4 +1,4 @@
-@import src/styles/components/variables
+@import ../variables
 
 #instructors
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 55.21%), url("../../../assets/images/background/instructors-bg.webp")
@@ -21,13 +21,13 @@
 
 .instructor__name
   font-family: 'Montserrat', sans-serif
-  font-size: 1.8rem
+  font-size: max(1.8rem, 16px)
   font-weight: 500
   margin-bottom: 10px
 
 .instructor__age
   font-family: 'Montserrat', sans-serif
-  font-size: 1.6rem
+  font-size: max(1.6rem, 14px)
   font-weight: 400
   margin-bottom: 16px
 
