--- a/src/styles/components/sections/_whyWe.sass
+++ b/src/styles/components/sections/_whyWe.sass
@@ -1,4 +1,4 @@
-@import src/styles/components/variables
+@import ../variables
 
 #why-we
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 55.21%), url("../../../assets/images/background/why-we-bg.webp")
@@ -28,11 +28,11 @@
 
     .why-we__subtitle
       font-weight: 700
-      font-size: 16px
+      font-size: max(1.6rem, 14px)
       margin-bottom: 6px
 
     .why-we__description
-      font-size: 1.4rem
+      font-size: max(1.4rem, 12px)
 
 @media screen and (max-width: $md)
   #why-we
