--- a/src/styles/components/sections/_enroll.sass
+++ b/src/styles/components/sections/_enroll.sass
@@ -1,4 +1,4 @@
-@import src/styles/components/variables
+@import ../variables
 
 #enroll
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 55.21%), url("../../../assets/images/background/faq-bg.webp") no-repeat
@@ -6,4 +6,4 @@
 
 .enroll__description
   margin-block: 20px 30px
-  font-size: 1.6rem
+  font-size: max(1.6rem, 14px)
