feat: add content for branches, change autopark photos

--- a/src/branches/devyatkino.pug
+++ b/src/branches/devyatkino.pug
@@ -1,4 +1,4 @@
 extends ../components/_branch
 
 block append variables
-    - branch = branches.find(el => el.name === 'Девяткино')
+    - branch = branches.find(branch => branch.href === 'devyatkino.html')
