--- a/src/components/_variables.pug
+++ b/src/components/_variables.pug
@@ -70,9 +70,9 @@
         {
             name: "Проспект Большевиков",
             href: "prospect-bolshevikov.html",
-            address: "Пр.Большевиков - Коллонтай, 3",
+            address: "Пр.Большевиков - ул. Коллонтай, 5/1",
             title: "Автошкола на Проспекте Большевиков",
-            mapSrc: ""
+            mapSrc: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2000.1409379260845!2d30.447837516386546!3d59.913208281866936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962e3dcd3a41e9%3A0x3900c5ff1a1472e1!2z0YPQuy4g0JrQvtC70LvQvtC90YLQsNC5LCA1LzEsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTMzMTM!5e0!3m2!1sru!2sru!4v1676623803409!5m2!1sru!2sru"
 
         },
         {
@@ -80,105 +80,105 @@
             href: "kupchino.html",
             address: "Балканская площадь, 5 лит Ю",
             title: "Автошкола в Купчино",
-            mapSrc: ""
+            mapSrc: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2005.4268779431834!2d30.376920332032793!3d59.825440620094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696250c1f3a936d%3A0x5cc59277d8241a2!2z0JHQsNC70LrQsNC90YHQutCw0Y8g0YPQuy4sIDXQu9C40YIuINCuLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkyMjgx!5e0!3m2!1sru!2sru!4v1676623931124!5m2!1sru!2sru"
         },
         {
             name: "Автово",
             href: "avtovo.html",
-            address: "проспект Стачек, 99",
+            address: "Проспект Стачек, 99",
             title: "Автошкола у м.Автово",
-            mapSrc: ""
+            mapSrc: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1000.450515831419!2d30.275031800643443!3d59.900592498396854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696308ef9955555%3A0xe74f37271897d91!2z0L_RgC4g0KHRgtCw0YfQtdC6LCA5OSwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsIDE5ODMwMg!5e0!3m2!1sru!2sru!4v1676623689555!5m2!1sru!2sru"
         },
         {
             name: "Комендантский Проспект",
-            href: "komendantskiy-aviakonstructorov.html",
-            address: "Пр.Большевиков - Коллонтай, 3",
-            title: "Автошкола у м.Комендтантский Проспект",
-            mapSrc: ""
+            href: "komendantskiy.html",
+            address: "Комендантская площадь, 1 лит А",
+            title: "Автошкола у м.Комендантский Проспект",
+            mapSrc: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1994.4489972175968!2d30.257545251766057!3d60.00763016340433!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469634309dfd9c89%3A0x8616781adca102e5!2z0JDRgtC80L7RgdGE0LXRgNCw!5e0!3m2!1sru!2sru!4v1676624154014!5m2!1sru!2sru"
         },
         {
             name: "Девяткино",
             href: "devyatkino.html",
-            address: "проспект Авиаторов Балтики, 7",
+            address: "Проспект Авиаторов Балтики, 7",
             title: "Автошкола у м.Девяткино",
-            mapSrc: ""
+            mapSrc: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497.9385084180391!2d30.437973788161646!3d60.052304768356144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4697ccb415639d8b%3A0xbced0590e17c974c!2z0L_RgC3Rgi4g0JDQstC40LDRgtC-0YDQvtCyINCR0LDQu9GC0LjQutC4LCA3LCDQnNGD0YDQuNC90L4sINCb0LXQvdC40L3Qs9GA0LDQtNGB0LrQsNGPINC-0LHQuy4sIDE4ODY2Mg!5e0!3m2!1sru!2sru!4v1676624580744!5m2!1sru!2sru"
         },
         {
             name: "Приморская",
             href: "primorskaya-jeleznovodskaya.html",
             address: "Железноводская, 68 к1",
             title: "Автошкола у м.Приморская",
-            mapSrc: ""
+            mapSrc: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d998.9139906274856!2d30.246098356916622!3d59.951588075108624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469636d17968d475%3A0xed57e867a304c2e8!2z0JbQtdC70LXQt9C90L7QstC-0LTRgdC60LDRjyDRg9C7LiwgNjgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTkxNTU!5e0!3m2!1sru!2sru!4v1676624669485!5m2!1sru!2sru"
         },
         {
             name: "Приморская",
             href: "primorskaya-odoevskogo.html",
             address: "Одоевского, 29",
             title: "Автошкола у м.Приморская",
-            mapSrc: ""
+            mapSrc: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1997.9967461882593!2d30.23543690443457!3d59.948788195870264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469636d70907704b%3A0xf7b7bcb6c170b5c!2z0YPQuy4g0J7QtNC-0LXQstGB0LrQvtCz0L4sIDI5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JvQtdC90LjQvdCz0YDQsNC00YHQutCw0Y8g0L7QsdC7LiwgMTk5MTU1!5e0!3m2!1sru!2sru!4v1676624704869!5m2!1sru!2sru"
         },
         {
             name: "Технологический институт",
             href: "technologicheskiy-institut.html",
             address: "Марата, 86 лит А",
             title: "Автошкола у м.Технологический институт",
-            mapSrc: ""
+            mapSrc: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1999.7959545402384!2d30.336310151763325!3d59.918933670561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46963052d4a9be47%3A0x700de0db962c9467!2z0YPQuy4g0JzQsNGA0LDRgtCwLCA4Niwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsIDE5MTExOQ!5e0!3m2!1sru!2sru!4v1676624736376!5m2!1sru!2sru"
         },
         {
             name: "Петроградская",
             href: "petrogradskaya.html",
             address: "Каменноостровский проспект, 42",
             title: "Автошкола у м.Петроградская",
-            mapSrc: ""
+            mapSrc: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8694760984263!2d30.307017551764844!3d59.967488566644036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696315a8575a43f%3A0xccd975ed40c1598c!2z0JrQsNC80LXQvdC90L7QvtGB0YLRgNC-0LLRgdC60LjQuSDQv9GALiwgNDIsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTcxMDE!5e0!3m2!1sru!2sru!4v1676624769959!5m2!1sru!2sru"
         },
         {
             name: "Крестовский остров",
             href: "krestovskiy-ostrov.html",
-            address: "Пр.Большевиков - Коллонтай, 3",
+            address: "Чкаловский проспект, 7",
             title: "Автошкола у м.Крестовский остров",
-            mapSrc: ""
+            mapSrc: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1997.3464905797434!2d30.287113051764546!3d59.9595757672825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46963149b0213a2d%3A0xce4d5e55c862e7c3!2z0KfQutCw0LvQvtCy0YHQutC40Lkg0L_RgC4sIDcsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTcxMTA!5e0!3m2!1sru!2sru!4v1676624813351!5m2!1sru!2sru"
         },
         {
             name: "Ломоносовская",
             href: "lomonosovskaya.html",
             address: "Бабушкина, 40",
             title: "Автошкола у м.Ломоносовская",
-            mapSrc: ""
+            mapSrc: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1156.66564110225!2d30.441385965703716!3d59.87782114100373!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962fa5342ba523%3A0xb14b840332ffdf2a!2z0YPQuy4g0JHQsNCx0YPRiNC60LjQvdCwLCA0MCwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsIDE5MjE3MQ!5e0!3m2!1sru!2sru!4v1676624854132!5m2!1sru!2sru"
         },
         {
             name: "Метро Рыбацкое",
             href: "rybackoe.html",
             address: "Караваевская, 24 к1",
             title: "Автошкола у м.Рыбацкое",
-            mapSrc: ""
+            mapSrc: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2004.9668451116452!2d30.506849499999994!3d59.833082100000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962f533df233eb%3A0xbd5941216cea712e!2z0JrQsNGA0LDQstCw0LXQstGB0LrQsNGPINGD0LsuLCAyNNC6MSwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsIDE5MjE3Nw!5e0!3m2!1sru!2sru!4v1676624879047!5m2!1sru!2sru"
         },
         {
             name: "Ленинский проспект",
             href: "leninskiy-prospect.html",
             address: "Ленинский проспект, 129 к6",
             title: "Автошкола у м.Ленинский проспект",
-            mapSrc: ""
+            mapSrc: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2003.866473164107!2d30.268986851761206!3d59.85135767600937!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46963ae90d7203e7%3A0x21017dab3bf7a132!2z0JvQtdC90LjQvdGB0LrQuNC5INC_0YAt0YIuLCAxMjnQujYsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTgyMTY!5e0!3m2!1sru!2sru!4v1676624910391!5m2!1sru!2sru"
         },
         {
             name: "Кудрово",
             href: "kudrovo.html",
             address: "Европейский проспект, 2 ст1",
             title: "Автошкола у м.Кудрово",
-            mapSrc: ""
+            mapSrc: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d486.01591452754036!2d30.512629917037444!3d59.89846877872794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962ef3113c499b%3A0xd51e5a66560113bc!2z0JXQstGA0L7Qv9C10LnRgdC60LjQuSDQv9GA0L7RgdC_LiwgMiwg0JrRg9C00YDQvtCy0L4sINCb0LXQvdC40L3Qs9GA0LDQtNGB0LrQsNGPINC-0LHQuy4sIDE5MzIzMg!5e0!3m2!1sru!2sru!4v1676624955318!5m2!1sru!2sru"
         },
         {
             name: "Проспект Ветеранов",
             href: "prospect-veteranov.html",
             address: "Ленинский проспект, 128 к2",
             title: "Автошкола у м.Проспект Ветеранов",
-            mapSrc: ""
+            mapSrc: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2003.7470163598625!2d30.266138251761273!3d59.85334147584943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46963aeeac6adf95%3A0x59acb802c939f0e1!2z0KLQoNCaINCd0LDRgNCy0LAsINCb0LXQvdC40L3RgdC60LjQuSDQv9GALdGCLiwgMTI4LCDQui4yLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTk4MjE2!5e0!3m2!1sru!2sru!4v1676624998902!5m2!1sru!2sru"
         },
         {
             name: "Комендантский Проспект",
-            href: "komendantskiy.html",
-            address: "проспект Авиаконструкторов, 5 к2",
+            href: "komendantskiy-aviakonstructorov.html",
+            address: "Проспект Авиаконструкторов, 5 к2",
             title: "Автошкола у м.Комендантский Проспект",
-            mapSrc: ""
+            mapSrc: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1994.2557887276455!2d30.24468995176619!3d60.010833663145775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46963433bc3aab79%3A0x4c4c53d92dca33a0!2z0L_RgC4g0JDQstC40LDQutC-0L3RgdGC0YDRg9C60YLQvtGA0L7QsiwgNSwg0LogMiwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsIDE5NzM3Mg!5e0!3m2!1sru!2sru!4v1676625028966!5m2!1sru!2sru"
         },
     ].sort((a, b) => a.name.localeCompare(b.name))
 
