--- a/src/components/_branch.pug
+++ b/src/components/_branch.pug
@@ -36,26 +36,26 @@ block head
 
 block main
     section#branch
-        h1.location__title.text-center= branch.title
+        h1.branch__title.text-center= branch.title
         .container
             ul.d-flex.flex-md-row.flex-column-reverse.p-0
                 li.map.col-md-6.col-12.my-md-0.my-4
-                    iframe(src=branch.mapSrc style='border:0;' allowfullscreen='' loading='lazy' referrerpolicy='no-referrer-when-downgrade' width='600' height='450')
-                li.col-md-6.col-12
+                    iframe(src=branch.mapSrc style= 'border:0;' allowfullscreen='' loading='lazy' referrerpolicy='no-referrer-when-downgrade' width='600' height='450')
+                li.branch__info.col-md-6.col-12
                     ul.contacts.d-flex.flex-column.h-100.p-md-4.p-0
-                        li.contacts__li.d-flex.align-items-start
-                            img.contacts__icon(src='../assets/icons/point.svg' alt='')
+                        li.contacts__li.d-flex.align-items-center
+                            img.contacts__icon(src=require('../assets/icons/point.svg') alt='')
                             p.contacts__address= branch.address
-                        li.contacts__li.d-flex.align-items-start
-                            img.contacts__icon(src='../assets/icons/telephone-fill.svg' alt='')
+                        li.contacts__li.d-flex.align-items-center
+                            img.contacts__icon(src=require('../assets/icons/telephone-fill.svg') alt='')
                             p.contacts__phone
                                 a(href=`tel:${phone.notFormatted}`)= phone.formatted
-                        li.contacts__li.d-flex.align-items-start
-                            img.contacts__icon(src='../assets/icons/envelope-fill.svg' alt='')
+                        li.contacts__li.d-flex.align-items-center
+                            img.contacts__icon(src=require('../assets/icons/envelope-fill.svg') alt='')
                             p.contacts__mail
                                 a(href=`mailto:${mail}`)= mail
-                        li.contacts__li.d-flex.align-items-start
-                            img.contacts__icon(src='../assets/icons/clock-fill.svg' alt='')
+                        li.contacts__li.d-flex.align-items-center
+                            img.contacts__icon(src=require('../assets/icons/clock-fill.svg') alt='')
                             .contacts__schedule.p-0= workTime
                         li.contacts__li.d-flex.align-items-start.contacts__link-wrapper
                             .d-flex.justify-content-center
