--- a/src/styles/components/_footer.sass
+++ b/src/styles/components/_footer.sass
@@ -4,31 +4,27 @@
   padding-block: 30px
   margin-top: auto
 
-.footer__title
-  font-size: 2rem
-  margin-bottom: 20px
-  color: $black
-
-.contacts__li
-  margin-bottom: 5px
-
-.contacts__li
-  font-family: 'Montserrat', sans-serif
-  font-size: 14px
-  font-weight: 500
-  color: $black
-  text-decoration: none
-
-.contacts__link
-  font-family: 'Montserrat', sans-serif
-  font-size: 14px
-  font-weight: 500
-  color: $dark-grey
-  text-decoration: none
-  &:hover
+  .footer__title
+    font-size: max(2rem, 12px)
+    margin-bottom: 2rem
     color: $black
 
-.social__icon
-  width: 30px
-  height: 30px
-  margin-top: 5px
+  .contacts__li
+    margin-bottom: 5px
+
+  .contacts__li
+    font-family: 'Montserrat', sans-serif
+    font-size: max(1.4rem, 10px)
+    font-weight: 500
+    color: $black
+    text-decoration: none
+
+  .contacts__link
+    font-family: 'Montserrat', sans-serif
+    font-size: max(1.4rem, 10px)
+    font-weight: 500
+
+  .social__icon
+    width: 3rem
+    height: 3rem
+    margin-top: 5px
