--- a/src/styles/components/branches.sass
+++ b/src/styles/components/branches.sass
@@ -1,41 +1,48 @@
 @import sections/enroll
 
-.location
+#branch
+  background: url("../../assets/images/background/stages-car-bg.webp") 100% center no-repeat
+  background-size: contain
   padding: 40px 0 50px
 
-.location__title
-  font-family: 'Raleway', sans-serif
-  margin-top: 30px
-  margin-bottom: 40px
-  font-size: 5.4rem
+  .branch__title
+    margin-top: 30px
+    margin-bottom: 40px
+    font-size: 5.4rem
 
-.map
-  border-top-right-radius: 20px
-  border-bottom-left-radius: 20px
-  overflow: hidden
-  box-shadow: 0 4px 8px rgba(0, 0, 0, .25)
-  background-color: #FFF
-  iframe
-    width: 100%
+  .map
+    overflow: hidden
+    box-shadow: 0 4px 8px rgba(0, 0, 0, .25)
+    background-color: #FFF
+    iframe
+      width: 100%
 
-.contacts__li
-  font-size: 2rem
-  color: #000
-  margin-bottom: 15px
-  line-height: 3rem
-  &:nth-last-of-type(2)
-    margin-bottom: 50px
+  .contacts__li
+    font-size: max(2rem, 14px)
+    color: #000
+    margin-bottom: 20px
+    &:nth-last-of-type(2)
+      margin-bottom: 50px
 
-.contacts__icon
-  width: 25px
-  filter: brightness(0)
-  margin-right: 15px
+  .contacts__icon
+    width: 25px
+    filter: brightness(0)
+    margin-right: 15px
 
-.contacts__li .contacts__address,
-.contacts__li .contacts__phone,
-.contacts__li .contacts__mail,
-.contacts__li .contacts__schedule
-  margin-top: -7px
+  .contacts__link-wrapper
+    margin: auto auto 0 auto
+    &:hover
+      cursor: pointer
 
-.contacts__link-wrapper
-  margin: auto auto 0 auto
+@media screen and (max-width: $xxl)
+  #branch
+    background: url("../../assets/images/background/stages-car-bg.webp") 100% 100% no-repeat
+    background-size: 50%
+
+@media screen and (max-width: $md)
+  #branch
+    background: url("../../assets/images/background/conus-bg.webp") 100% 20% no-repeat
+    background-size: 50%
+
+    .contacts__link-wrapper
+      margin-bottom: 20px
