--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -22,6 +22,12 @@ ul
 section
   padding-block: 50px 70px
 
+a
+  color: $dark-grey
+  text-decoration: none
+  &:hover
+    color: $black
+
 .link
   width: fit-content
   display: flex
@@ -55,11 +61,11 @@ section
 
 .carousel-fade .active.carousel-item-end .carousel-photo,
 .carousel-fade .carousel-item-next:not(.carousel-item-start) .carousel-photo
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.125)
+  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.125))
 
 .carousel-fade .active.carousel-item-start .carousel-photo,
 .carousel-fade .carousel-item-prev:not(.carousel-item-end) .carousel-photo
-  box-shadow: none
+  filter: none
 
 .carousel-item
   margin-bottom: 8px
@@ -76,7 +82,7 @@ section
   height: 264px
   width: auto
   margin-inline: auto
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25)
+  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25))
 
 .carousel-description
   margin-bottom: 0
