feat: add something

--- a/src/components/_base.pug
+++ b/src/components/_base.pug
@@ -13,6 +13,7 @@ html(lang="ru")
         link(href=require("../styles/bootstrap.min.css"), rel="stylesheet")
         link(href=require("../styles/style.sass"), rel="stylesheet")
         script(src=require("../js/bootstrap.bundle.js"), defer)
+        script(src='https://formdesigner.ru/js/roistat/popup.js?v=0.0.3', async)
         block head
     body
         include _header
