--- a/src/components/_footer.pug
+++ b/src/components/_footer.pug
@@ -10,4 +10,4 @@ footer#footer
                 a.contacts__link(href=`mailto:${mail}`)= " " + mail
             li.contacts__li.text-center
                 a.social__link(href="https://vk.com")
-                    img.social__icon(src=require("../assets/icons/vk.svg"))
+                    img.social__icon.social__icon_vk(src=require("../assets/icons/vk.svg"))
