--- a/src/components/_mixins.pug
+++ b/src/components/_mixins.pug
@@ -1,11 +1,31 @@
 
 //-Модальное окно Оставить заявку
 mixin enrollModal(classes)
-    a.link(href="", class=classes) Оставить заявку
+    a.link(class= `` target='_blank' onclick="FDPopup.open(194860,{'hideCloseBtn':false,'host':'formdesigner.ru','overlay':{'background':'#000000','opacity':0.1}}); return false;" href='https://formdesigner.ru/form/view/194860') Оставить заявку
 
 //-Форма Оставить заявку
-mixin enrollForm(classes)
-    div(class=classes)
+mixin enrollForm(index, classes)
+    div(id=`form_194860_${index}` class=classes)
+    script(type='text/javascript').
+        index="#{index}";
+        (function (d, w, c) {
+            (w[c] = w[c] || []).push({
+                formId: 194860,
+                host: "formdesigner.ru",
+                formHeight: 100,
+                el: `form_194860_${index}`,
+                center: 1,
+                scroll: 0
+            });
+            var s = d.createElement("script"), g = "getElementsByTagName";
+            s.type = "text/javascript";
+            s.charset = "UTF-8";
+            s.async = true;
+            s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//formdesigner.ru/js/roistat/iform.js?v=0.0.3";
+            var h = d[g]("head")[0] || d[g]("body")[0];
+            h.appendChild(s);
+        })(document, window, "fdforms");
+
 
 //-Аккордеон с вопросами
 mixin accordionItem(index, question, answer)
