--- a/src/styles/components/_header.sass
+++ b/src/styles/components/_header.sass
@@ -18,6 +18,7 @@ body
 
 .navbar-nav
   gap: 26px
+  align-items: center
 
 .navbar-light .navbar-nav .nav-link
   font-size: 1.4rem
@@ -29,9 +30,8 @@ body
 .navbar-toggler
   border: none
   float: right
-
-.navbar-toggler:focus
-  box-shadow: none
+  &:focus
+    box-shadow: none
 
 .navbar-svg
   filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25))
