--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -42,22 +42,39 @@ a
   text-transform: uppercase
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25)
   transition: box-shadow .05s
+  position: relative
+  overflow: hidden
+  &::after
+    background: #fff
+    content: ""
+    display: block
+    height: 155px
+    left: -75px
+    opacity: .2
+    position: absolute
+    top: -50px
+    transform: rotate(35deg)
+    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1)
+    width: 50px
+    z-index: 10
+    animation: blink 2s infinite
   &:hover
     color: $white
     box-shadow: 0 0 30px rgba(213, 4, 5, 0.93)
+    &::after
+      background: transparent
+
+@keyframes blink
+  80%
+    left: -75px
+  100%
+    left: 120%
 
 .text_white
   color: $white
 
 .text_red
   color: $red
-
-.enroll-form
-  display: none
-  margin-inline: auto
-  padding: 10px
-  border: 1px solid #D9D9D9
-  box-sizing: content-box
 
 .carousel-fade .active.carousel-item-end .carousel-photo,
 .carousel-fade .carousel-item-next:not(.carousel-item-start) .carousel-photo
@@ -90,6 +107,15 @@ a
 .carousel-control-prev,
 .carousel-control-next
   margin-top: 10px !important
+
+.social__icon_vk
+  width: max(3rem, 25px)
+  height: max(3rem, 25px)
+
+.social__icon_phone
+  width: max(2.4rem, 20px)
+  height: max(2.4rem, 20px)
+  margin-right: -5px
 
 @media screen and (max-width: $lg)
   html
