--- a/src/components/_variables.pug
+++ b/src/components/_variables.pug
@@ -2,8 +2,9 @@
 - year = new Date().getFullYear()
 
 //-Основная информация
-- title = `Автошкола "Автомото" ${year} год`
 - phone = { formatted: "8 (812) 642-91-46", notFormatted: "88126429146" }
+- title = `Автошкола АвтоМото в СПб | Права категории B и A за 3 месяца с обучением очно и онлайн`
+- description = `✅ Обучение водителей в СПб на категорию А и Б ✔️ Классы и площадки рядом с метро  ✔️ Офлайн и онлайн ✔️ Обучение вождению на иномарках ✔️ АКПП, МКПП ✔️ Страховка, договор, фиксированная цена ☎️${phone.formatted}`
 - mail = "avtomotospb@yandex.ru"
 - workTime = "пн-вс с 10:00 до 20:00"
 
