--- a/src/index.pug
+++ b/src/index.pug
@@ -5,7 +5,40 @@ block variables
 
 block head
     link(href=require("/src/styles/components/main.sass"), rel="stylesheet")
-    script(src=require("/src/js/index.js"), defer)
+
+block head_start
+    // Google Tag Manager
+    script.
+        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-59TXGMR');
+    // End Google Tag Manager
+
+block body_start
+    // Yandex.Metrika counter
+    script(type='text/javascript').
+        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+        m[i].l=1*new Date();
+        for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+        k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+        ym(91557273, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+        });
+    noscript
+        div
+            img(src='https://mc.yandex.ru/watch/91557273' style='position:absolute; left:-9999px;' alt='')
+    // /Yandex.Metrika counter
+    // Google Tag Manager (noscript)
+    noscript
+        iframe(src='https://www.googletagmanager.com/ns.html?id=GTM-59TXGMR' height='0' width='0' style='display:none;visibility:hidden')
+    // End Google Tag Manager (noscript)
+
 
 block main
     main#main
@@ -139,3 +172,6 @@ block main
                 h3.text_white.text-center Остались вопросы?
                 p.enroll__description.text-center.text_white Наш менеджер свяжется с Вами через несколько минут
                 +enrollForm(1, 'enroll-form')
+
+block body_end
+    script(src=require("/src/js/index.js") defer)
