--- a/src/components/_variables.pug
+++ b/src/components/_variables.pug
@@ -6,7 +6,7 @@
 - title = `Автошкола АвтоМото в СПб | Права категории B и A за 3 месяца с обучением очно и онлайн`
 - description = `✅ Обучение водителей в СПб на категорию А и Б ✔️ Классы и площадки рядом с метро  ✔️ Офлайн и онлайн ✔️ Обучение вождению на иномарках ✔️ АКПП, МКПП ✔️ Страховка, договор, фиксированная цена ☎️${phone.formatted}`
 - mail = "avtomotospb@yandex.ru"
-- workTime = "пн-вс с 10:00 до 20:00"
+- workTime = "пн-пт с 8:00 до 22:30 и сб-вс: с 9:00 до 22:00"
 
 //-Навигационные ссылки
 -   prefixUrl = ""
